packages/ui/assets/styling/globals.scss
@import "./fonts.scss";
@import "./theme.scss";

* {
    box-sizing: border-box;
}

html {
    font-family: 'adwaita', 'adwaita-fallback';
    font-size: $font-size;
}

header {
  text-align: center;
  margin-bottom: $spacing * 12;
}

body {
    background-image: linear-gradient(to right bottom, $color-dark 0%, $color-main 50%, $color-dark 100%);
    background-repeat: no-repeat;
    min-height: 100vh;
    max-width: 100vw;
    width: 100vw;
    color: $text-color;
    margin: 0;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  margin: 0;
}

h1 {
  font-size: 3rem;
  font-weight: 700;
}

h2 {
  font-size: 1.25rem;
  line-height: 1.25rem;
  font-weight: 500;
}

h3 {
  font-size: 2.25rem;
  font-weight: 400;
}

h6 {
  font-size: 18px;
  font-weight: 400;
}

p {
  margin: 0;
}

a {
  text-decoration: none;
  font-weight: bold;
  color: white;

  &:hover {
    text-decoration: underline;
  }
}

.card {
  background-color: color-mix(in oklab, $color-white 10%, transparent);
  backdrop-filter: blur(8px);
  min-width: 100px;
  padding: calc($spacing * 8);
  border-style: solid;
  border-color: color-mix(in oklab, $color-white 20%, transparent);
  border-width: 1px; 
  border-radius: 1rem;
  box-shadow: rgba(0, 0, 0, 0) 0px 0px 0px 0px, 
              rgba(0, 0, 0, 0) 0px 0px 0px 0px, 
              rgba(0, 0, 0, 0) 0px 0px 0px 0px, 
              rgba(0, 0, 0, 0) 0px 0px 0px 0px, 
              rgba(0, 0, 0, 0.25) 0px 25px 50px -12px;
}

.full-width {
  width: 100%;
}

.gap-2 {
  gap: calc($spacing * 2);
}

.gap-6 {
  gap: calc($spacing * 6);
}

.row {
  display: flex;
}

.full-height {
  height: 100%;
}

.color-purple-400 {
  color: $color-purple-400;
}

.site-footer {
  margin-top: calc($spacing * 12);
  padding-block: calc($spacing * 6);
  border-top: 1px solid color-mix(in oklab, $color-white 15%, transparent);
  display: flex;
  justify-content: center;
  gap: calc($spacing * 6);

  a {
    color: $color-purple-300;
    font-size: $font-size-small;
    font-weight: $font-weight-semibold;

    &:hover {
      color: $color-white;
    }
  }
}

